--- a/Models/-VC/2025.08.09_Maestro-EVC.md
+++ b/Models/-VC/2025.08.09_Maestro-EVC.md
@@ -19,3 +19,12 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+Emotional voice conversion (EVC) aims to modify the emotional style of speech while preserving its linguistic content.
+In practical EVC, controllability, the ability to independently control speaker identity and emotional style using distinct references, is crucial.
+However, existing methods often struggle to fully disentangle these attributes and lack the ability to model fine-grained emotional expressions such as temporal dynamics.
+We propose Maestro-EVC, a controllable EVC framework that enables independent control of content, speaker identity, and emotion by effectively disentangling each attribute from separate references.
+We further introduce a temporal emotion representation and an explicit prosody modeling with prosody augmentation to robustly capture and transfer the temporal dynamics of the target emotion, even under prosody-mismatched conditions.
+Experimental results confirm that Maestro-EVC achieves high-quality, controllable, and emotionally expressive speech synthesis.
