--- a/Models/-VC/2025.08.09_Maestro-EVC.md
+++ b/Models/-VC/2025.08.09_Maestro-EVC.md
@@ -106,3 +106,258 @@ Our contributions are summarized as follows:
 -  Through objective and subjective evaluations, we demonstrate that our method generates high-quality speech with rich emotional expressiveness and accurate control over each target attribute.
 
 Audio samples are available at \url{https://maestroevc.github.io/demo/}.
+
+## 2·Methods
+
+Fig. 1 illustrates the overall architecture of {\sysname}.
+
+During inference, the model takes three reference utterances for content, emotion, and speaker identity, which are encoded into latent representations.
+
+A cross-attention mechanism combines the content and temporal emotion style representations to produce a content-aware emotion embedding.
+
+Target duration is predicted using this embedding and the duration representation from the emotion reference.
+
+The FE (F0/Energy) predictor receives F0 and energy extracted from the emotion reference, along with content and temporal emotion representations.
+
+The predicted content, emotion, prosody, and speaker representations are integrated and fed into a HiFi-GAN[^Kong2020Hifi-Gan] vocoder for waveform synthesis.
+
+In the following subsections, we provide a detailed description of each component of {\sysname}.
+
+### Content Encoder
+
+\label{sec:content_encoder}
+
+To extract a content representation that captures only linguistic information from input reference audio, we follow prior works[^Li2024Sef-Vc], [^Kreuk2021Textless] that utilize a pre-trained HuBERT model[^Hsu2021Hubert], which was trained with a masked prediction task on audio signals.
+
+Given a content reference $x_c$, the HuBERT model encodes it into a sequence of frame-level continuous representations $z$.
+
+To discretize $z$, we apply K-means clustering to obtain a sequence of discrete units $\hat{z}$, which are then mapped to learnable embeddings via an embedding table, resulting in the discrete content representation $c$.
+
+### Temporal Content-aware Emotion Modeling (TCEM)
+
+\label{sec:temporal_content_aware_emotion_modeling}
+
+To achieve temporally fine-grained emotional style transfer, we extract emotion representations at the frame level and align them with the target content via cross-attention mechanism.
+
+Assuming the resulting representations may contain unintended content information, we apply a gradient reversal layer (GRL) to the cross-attention output to suppress residual content cues.
+
+#### Temporal Emotion Encoder
+
+To extract fine-grained temporal emotion representation, we adopt the approach of Wang *et al.*[^Wang2023Speech], which formulates speech emotion diarization as a task of predicting both emotion labels and their frame-level boundaries.
+
+We use pre-trained model which has proven effective in downstream tasks such as emotional speech synthesis.
+
+#### Cross-attention Mechanism
+
+We use a cross-attention mechanism to temporally align frame-level emotional cues with the separately encoded linguistic content.
+
+Given the content and emotion references, $x_c$ and $x_e$, the content encoder produces a frame-level sequence $c$, while the temporal emotion encoder generates a sequence of emotion embeddings $e$.
+
+To incorporate the emotional information into the linguistic content in a content-aware manner, we use $c$ as the query sequence $Q$, and $e$ as the key and value sequence $K$ and $V$, respectively, resulting in an aligned emotion representation $\hat{e}$.
+
+#### Residual Content Disentanglement
+
+Although the temporal emotion encoder is trained to extract frame-level emotion representations, its short-term acoustic inputs can inherently contain both emotional and phonetic information.
+
+We hypothesize that this feature-level entanglement causes the resulting representation $\hat{e}$ to retain unintended linguistic cues.
+
+This can yield prosodic artifacts, degrading both the naturalness and emotional expressiveness, especially when transferring emotion across mismatched linguistic content.
+
+To mitigate this, we apply a projection block to the cross-attention output, followed by a GRL and content classifier during training.
+
+The content classification loss $\mathcal{L}_{cont}^{GRL}$ is imposed adversarially through the GRL to suppress residual linguistic information in the emotion representation.
+
+This yields a disentangled emotion representation $\hat{e}_d$ that effectively preserves fine-grained emotional style from $x_e$ while being temporally aligned with the target content.
+
+Ablation results presented in Table~[table_1](#table_1) empirically support our hypothesis.
+
+Removing the content GRL reduces both emotional expressiveness and content fidelity, indicating that residual linguistic cues in the emotion representation interfere with effective style transfer.
+
+### Explicit Emotional Prosody Transfer (EEPT)
+
+To explicitly transfer the F0 and energy of the target prosody, we apply smoothing and prosody augmentation to these features and use them as conditions for the FE predictor, which generates the predictions aligned with the target content.
+
+#### Prosody Extractor
+
+We first extract three prosodic features from the emotion reference: F0, energy, and duration denoted as $\nu$, $\eta$, and $d$, respectively.
+
+To emphasize the overall contour of prosodic patterns while suppressing micro-level fluctuations, we apply a Savitzky-Golay filter[^Savitzky1964Smoothing] to smooth the extracted features.
+
+This step ensures that prosody transfer relies on general prosodic trends rather than on content-specific perturbations.
+
+The smoothed F0, energy and duration are denoted as $\nu_s$, $\eta_s$, and $d_s$.
+
+#### Prosody Augmentation
+
+\label{sec:prosody_augmentation}
+
+Reconstruction-based framework constrains the content and emotion reference to have the same prosody.
+
+Thus, it cannot directly learn from prosody-mismatched scenarios, often resulting in unnatural speech during inference.
+
+To address this, we introduce a prosody augmentation strategy that enables indirect learning of prosody transfer under prosody-mismatched conditions.
+
+During training, $\nu_s$ and $\eta_s$ are randomly augmented using either random shifting or piecewise time warping, each selected with equal probability.
+
+Random shifting, which shifts the entire prosody sequence along the time axis by a random amount, simulates misalignment between content and prosody preserving the internal prosodic pattern.
+
+Piecewise time warping segments the prosody sequence, randomly stretches or compresses each segment along the time axis, and then concatenates and rescales the result to the original length.
+
+This simulates partial mismatches in speaking rate or rhythm.
+
+Formally, the augmentation process is defined as:
+
+$$
+
+\nu_a, \eta_a = \mathrm{ProAug}\left(\nu_s, \eta_s\right),
+
+$$
+
+where $\nu_a$ and $\eta_a$ are the augmented F0 and energy, and $\mathrm{ProAug}(\cdot)$ denotes the prosody augmentation module.
+
+These augmentations allow the model to explicitly transfer prosody from any prosody-mismatched reference pair, preserving naturalness and expressiveness of speech during inference.
+
+#### FE Predictor
+
+\label{prosody_predictor}
+
+To enable explicit prosody transfer adapted to the target content, we leverage not only the augmented F0 and energy but also incorporate the content embedding and the voiced/unvoiced (VUV) mask of the content reference $x_c$.
+
+The VUV information plays a crucial role in guiding the model toward the perceptually relevant regions for prosody transfer.
+
+As F0 and energy have limited relevance in unvoiced segments, explicitly incorporating the VUV mask enables the model to assign the essential prosodic information from the emotion reference $x_e$ to the voiced regions of $x_c$.
+
+The inputs to the FE predictor are formally defined as follows:
+
+$$
+
+\hat{\nu}, \hat{\eta} = \mathrm{FEPred}\left(\nu_e + \eta_e + c + v \right),
+
+$$
+
+where $\hat{\nu}$ and $\hat{\eta}$ denote the predicted F0 and energy, $\nu_e$ and $\eta_e$ are the F0 and energy projected into a shared embedding space, $c$ and $v$ denote the discrete content representation and VUV mask extracted from $x_c$, and $\mathrm{FEPred}(\cdot)$ denotes the FE predictor.
+
+#### Duration Predictor
+
+To incorporate the target duration patterns, we predict the unit durations of $x_c$ based on its unique unit sequence, the smoothed durations $d_s$ and disentangled emotion representation $\hat{e}_d$ derived from $x_e$.
+
+We design the duration predictor to take these three inputs for estimating the duration of each unit.
+
+We first extract sequences of discrete units, $\hat{z}_c$ and $\hat{z}_e$ from $x_c$ and $x_e$, respectively.
+
+To obtain a distinct sequence of units and their corresponding repetition counts, we apply a deduplication operation:
+
+$$
+
+\hat{z}_{uniq}, n_{count} = \text{dedup}(\hat{z}),
+
+$$
+
+where $\hat{z}_{uniq}$ denotes the sequence of unique units, and $n_{count}$ indicates the number of consecutive occurrences for each unit, which serves as the duration $d$.
+
+From $x_e$, we extract $n_{count}$, which is then smoothed using a Savitzky–Golay filter to obtain the $d_s$.
+
+We also extract $\hat{e}_d$ from $x_e$.
+
+These, together with the unique unit sequence from $x_c$, are fed into the duration predictor to estimate the predicted duration $\hat{d}$.
+
+#### Prosody Loss
+
+During training, the FE predictor and duration predictor are optimized to predict their respective ground-truth targets.
+
+Specifically, the FE predictors are trained to estimate $\nu$ and $\eta$, while the duration predictor learns to predict $d$ extracted from $x_c$, as formulated below:
+
+$$
+
+\mathcal{L}_{prosody} = \mathcal{L}_{f0} + \mathcal{L}_{energy} + \mathcal{L}_{dur},
+
+$$
+
+where $\mathcal{L}_{f0}$ and $\mathcal{L}_{energy}$ are L2 losses for F0 and energy prediction, and $\mathcal{L}_{dur}$ is the L1 loss for duration prediction.
+
+\setlength{\textfloatsep}{0pt}
+\setlength{\intextsep}{0pt}
+\setlength{\tabcolsep}{4pt}
+
+<a id="table_1">Objective evaluation results for WER, CER, EECS, SCA, F0-PCC, and E-PCC.</a>
+
+### Emotion-Invariant Speaker Encoder (EISE)
+
+We derive embeddings from the speaker reference $x_s$ that are invariant to emotional attributes while preserving speaker identity.
+
+We adopt a pre-trained ECAPA-TDNN[^Desplanques2020Ecapa-TDNN], widely used for robust speaker representations, though it may still encode emotional information.
+
+In order to mitigate the entanglement between speaker identity and emotional information, we append trainable layers to the output of the frozen pre-trained ECAPA-TDNN, referred to as the speaker encoder.
+
+A GRL and an emotion classifier are applied to the appended layers.
+
+The speaker encoder is trained adversarially using the emotion classification loss $\mathcal{L}_{emo}^{GRL}$ reversed by the GRL to encourage the suppression of emotional cues in the appended layers.
+
+Although the GRL discourages the encoder from retaining emotional information, it does not explicitly enforce consistency across embeddings of the same speaker under different emotional conditions.
+
+To address this limitation, we incorporate a triplet loss based on cosine similarity, which encourages embeddings of the same speaker under different emotional states to be more similar than those of different speakers.
+
+Each triplet consists of an anchor, a positive sample from the same speaker with different emotions, and a negative sample from a different speaker.
+
+The loss is defined as:
+
+$$
+\begin{aligned}
+
+\mathcal{L}_{trip} = \sum_{i=1}^{N} \big[
+& \operatorname{sim}\left(E_s(x_i^a), E_s(x_i^n)\right) \nonumber \\
+& - \operatorname{sim}\left(E_s(x_i^a), E_s(x_i^p)\right) + \alpha
+\big]_+,
+
+\end{aligned}
+$$
+
+where $\operatorname{sim}(\cdot,\cdot)$ denotes the cosine similarity, and $x_i^a, x_i^p, x_i^n$ represent the anchor, positive, and negative samples, respectively.
+
+The margin $\alpha$, set to 0.3, defines the minimum desired separation between the positive and negative pairs.
+
+The total speaker loss is defined as:
+
+$$
+\begin{aligned}
+
+\mathcal{L}_{spk} = \mathcal{L}_{trip} + \mathcal{L}_{emo}^{GRL},
+
+\end{aligned}
+$$
+
+By combining GRL and triplet loss, the speaker encoder is encouraged to suppress emotional information and to maintain speaker-consistent embeddings across emotions.
+
+### Training strategy
+
+\label{SCM}
+
+The model is trained to reconstruct the input waveform.
+
+A single input $x$ serves as $x_c$, $x_e$, and $x_s$ with HiFi-GAN[^Kong2020Hifi-Gan] as the vocoder.
+
+The generator $G$ and discriminator $D$ are optimized with the following losses:
+
+$$
+
+\mathcal{L}_{G} = \mathcal{L}_{adv}(G; D) + \mathcal{L}_{fm} + \mathcal{L}_{recon}(G),
+
+$$
+
+$$
+
+\mathcal{L}_{D} = \mathcal{L}_{adv}(D; G),
+
+$$
+
+where $\mathcal{L}_{adv}$, $\mathcal{L}_{fm}$, and $\mathcal{L}_{recon}(G)$ represent the adversarial, feature matching, and reconstruction losses, respectively.
+
+The total loss for $G$ is given by:
+
+$$
+
+\mathcal{L}_{G}^{total} = \mathcal{L}_{G} + \mathcal{L}_{spk} + \mathcal{L}_{cont}^{GRL} + \mathcal{L}_{prosody},
+
+$$
+
+where $\mathcal{L}_{spk}$, $\mathcal{L}_{cont}^{GRL}$, $\mathcal{L}_{prosody}$ are auxiliary losses for speaker supervision, content disentanglement via GRL, and prosody modeling, each weighted by a tunable coefficient $\lambda$.
