--- a/Models/-VC/2025.08.09_Maestro-EVC.md
+++ b/Models/-VC/2025.08.09_Maestro-EVC.md
@@ -361,3 +361,75 @@ $$
 $$
 
 where $\mathcal{L}_{spk}$, $\mathcal{L}_{cont}^{GRL}$, $\mathcal{L}_{prosody}$ are auxiliary losses for speaker supervision, content disentanglement via GRL, and prosody modeling, each weighted by a tunable coefficient $\lambda$.
+
+## 3·Experiments
+
+### Experimental Setup
+
+#### Dataset
+
+We used the 12-layer base HuBERT model[^Hsu2021Hubert] pre-trained on 960 hours of the LibriSpeech dataset[^Panayotov2015Librispeech], and the ECAPA-TDNN pre-trained on the VoxCeleb dataset[^Nagrani2017Voxceleb].
+
+For training and evaluation, we used the English partition of the Emotional Speech Dataset[^Zhou2022Emotional], which contains 350 parallel utterances at 16 kHz from 10 English speakers across five emotions: neutral, happy, angry, sad, and surprise.
+
+#### Implementation details
+
+In our implementation, the content encoder used a vocabulary size of 500, with each token embedded into a 256-dimensional vector.
+
+Input audio was converted to an 80-bin Mel-spectrogram with a window size 1,024 and a hop size 256, which was used for both Mel-based reconstruction loss and frame-level energy extraction.
+
+Additionally, F0 was extracted using the WORLD vocoder[^Morise2016World].
+
+In prosody augmentation, shifting moves the sequence by a random value in [-15, 15] frames, and piecewise time warping randomly splits it into 2–5 segments, each scaled by a factor randomly sampled from [0.4, 1.6].
+
+Both the FE and duration predictors consist of two stacked Transformer blocks with 1D convolution layers replacing the feed-forward network[^Vaswani2017Attention].
+
+The weight $\lambda_{recon}$ for Mel-based reconstruction loss was set to 45, while all other loss weights were set to 1.
+
+The AdamW optimizer was used, with a learning rate of $2 \times 10^{-4}$.
+
+#### Baselines
+
+We adopt StyleVC[^Du2021Disentanglement] and ZEST[^Dutta2024Zero] as our baseline models.
+
+StyleVC is an any-to-any expressive voice conversion framework designed to disentangle linguistic content, speaker identity, pitch, and emotional style information, enabling simultaneous conversion of arbitrary speaker identity and emotional style.
+
+ZEST is a zero-shot EVC framework that separates speaker and emotion representations and predicts F0 from the extracted content, speaker, and emotion features, allowing it to handle reference-guided conversion with prosody transfer.
+
+To the best of the authors’ knowledge, there has been no prior EVC model that simultaneously considers both pitch and energy in prosody modeling.
+
+Therefore, we selected these two models as baselines for their focus on pitch transfer.
+
+### Evaluation Settings
+
+Rather than restricting speaker reference to the neutral emotional state, this experiment employed emotionally expressive references to evaluate the conversion to the target emotion style, thus enabling a more comprehensive assessment.
+
+#### Seen dataset evaluation
+
+We randomly constructed 700 test input sets, each composed of a content, speaker, and emotion reference drawn from different speakers and containing distinct linguistic content.
+
+This setting ensures diverse evaluation conditions.
+
+#### Zero-shot evaluation
+
+\label{unseen_scenario}
+
+To assess generalization, we evaluated {\sysname} under two unseen scenarios: unseen speakers (US) using 18 speakers from the VCTK corpus[^Yamagishi2017Cstr], and unseen emotion states (UE) using held-out classes, fear and disgust from the CREMA-D[^Cao2014Crema-D] and frustration and excitement from IEMOCAP[^Busso2008Iemocap].
+
+#### Evaluation metrics
+
+We evaluated the converted speech using six objective metrics.
+
+For intelligibility, we computed word error rate (WER) and character error rate (CER) using Whisper[^Radford2023Robust].
+
+Emotion similarity was measured by emotion embedding cosine similarity (EECS) with the emotion2vec+ base9 model[^Ma2023Emotion2vec].
+
+Speaker similarity was assessed via speaker classification accuracy (SCA) based on pre-trained classifier.
+
+We evaluated prosody alignment via Pearson correlation coefficient (PCC)[^Cohen2009Pearson] between the F0 and energy trajectories of the synthesized speech and the reference, after aligning them using dynamic time warping[^M{\"u}ller2007Dynamic].
+
+For subjective evaluation, we conducted a Mean Opinion Score (MOS) test with 25 human participants, using 30 randomly sampled test pairs.
+
+Participants rated naturalness, emotional similarity, speaker similarity, and prosody similarity, by comparing each sample with the corresponding target reference.
+
+For prosody, they assessed the similarity of temporal variations in pitch, intensity, and speaking rate.
