--- a/Models/-VC/2025.08.09_Maestro-EVC.md
+++ b/Models/-VC/2025.08.09_Maestro-EVC.md
@@ -521,3 +521,22 @@ Fig.~[fig:f0_comparison](#fig:f0_comparison) shows the F0 contours of the emotio
 As shown in (a), compared with the baseline models, {\sysname} more accurately follows the pitch contour of the emotion reference.
 
 Furthermore, (b) shows that, even within the same emotion category, variations in prosodic expression across different references result in distinct outputs, indicating that our model effectively reflects fine-grained prosodic differences.
+
+## 5·Conclusion
+
+In this paper, we propose {\sysname}, a novel controllable EVC framework that harmonizes various attributes of emotional speech, including content, speaker identity, emotion, and temporal dynamics.
+
+By disentangling content, speaker, and emotion representations, it enables independent control of each attribute using separate reference utterances, even with any reference combination.
+
+To achieve rich expressiveness, we introduce a temporal emotion representation and explicit prosody transfer, enabling effective performance even in prosody-mismatched scenarios.
+
+Experimental results demonstrate that {\sysname} outperforms existing baselines across all metrics in both seen and zero-shot scenarios, validating its controllability and expressiveness.
+
+\input{Sections/6_Acknowledgment}
+
+\clearpage
+
+\bibliographystyle{IEEEtran}
+\bibliography{bibliography}
+
+\end{document}
