--- a/Models/-VC/2025.07.19_Conan.md
+++ b/Models/-VC/2025.07.19_Conan.md
@@ -89,3 +89,68 @@ For high-quality natural streaming speech synthesis, we adopt a causal-convoluti
 Experimental evaluations show that Conan outperforms baseline models in real-time content accuracy, quality, and speaker similarity.
 
 Conan can achieve a latency as low as 37 ms for the conversion on a single A100 GPU without any engineering optimizations.
+
+## 2·Related Work
+
+### Zero-Shot Voice Conversion
+
+In practical scenarios, obtaining reference speech during training is often impractical. 
+Therefore, zero-shot VC models are essential to capture and control speaker identity by disentangling content from speaker characteristics.
+
+Chou et al. employ instance normalization to separate speaker and content [^Chou2019One-Shot], while Wang et al. retrieve variable‐length speaker embeddings along both temporal and channel dimensions under the guidance of a pre‐trained speaker‐verification model [^Wang2023Multi-Level].
+
+Ebbers et al. leverage adversarial contrastive predictive coding for fully unsupervised separation of content and speaker [^Ebbers2021Contrastive].
+
+AutoVC squeezes out speaker timbre from content embeddings using an information bottleneck [^Qian2019Autovc], and VQMIVC encodes content via vector quantization, applying mutual information constraints to decorrelate speech components [^Wang2021Vqmivc]. 
+Some approaches obtain speaker representations through a speaker‐verification model and extract content from Automatic Speech Recognition (ASR) posteriorgrams [^Sun2016Phonetic]. 
+ControlVC [^Chen2022Controlvc] uses pretrained encoders to get content and speaker embeddings and applies TD-PSOLA and pitch contour manipulation for time-varying speed and pitch control. 
+NANSY trains in a fully self‐supervised manner using wav2vec features alongside Yingram [^Choi2021Neural], and LM-VC tokenizes speech into semantic tokens via HuBERT and acoustic tokens via SoundStream [^Wang2023Lm-Vc]. 
+Although StreamVoice further advances real‐time separation and recombination of speaker and content using a language model and ASR [^Wang2024Streamvoice], current online VC systems still exhibit considerable room for improvement in transferring unseen reference speaker identity and in accurately extracting linguistic content.
+
+### Online Voice Conversion
+
+In online VC, the system must process source speech chunk by chunk and synthesize output incrementally, without access to future context.
+
+This often degrades naturalness at chunk boundaries. 
+For streaming applications, causal processing is a critical design consideration.
+
+Hayashi et al. [^Hayashi2022Investigation] propose a streamable version of the non‐autoregressive sequence‐to‐sequence VC model based on FastSpeech2 [^Ren2020Fastspeech] and NAR‐S2S‐VC [^Hayashi2021Non-Autoregressive], incorporating causal convolutions and self‐attention with causal masks. 
+FastS2S‐VC [^Kameoka2021FastS2S-Vc] learns to predict attention distributions from source speech and reference speaker indices alone, guided by a teacher model. 
+IBF-VC [^Chen2023Streaming] uses the Intermediate Bottleneck Features (IBFs) to replace Phonetic Posteriorgrams (PPGs) in the ASR encoder to capture more fine-grained prosody information, and applies non-streaming teacher guidance for the timbre leakage problem. 
+DualVC [^Ning2024Dualvc] leverages dynamic masked convolution to use the within-chunk future information better.
+
+Yang et al. [^Yang2022Streamable] adapt the originally offline VQMIVC model [^Wang2021Vqmivc] for real‐time, chunk‐by‐chunk processing. 
+ALO‐VC [^Wang2023Alo-Vc] assembles a streaming system composed of a speaker‐verification model, a streamable phonetic‐posteriorgram extractor, and an F0 extractor. 
+StreamVC [^Yang2024Streamvc] demonstrates that a lightweight causal convolutional network can effectively capture soft speech‐unit representations, while StreamVoice [^Wang2024Streamvoice] introduces autoregressive decoders to enforce temporal causality. 
+
+Quamer [^Quamer2024End-to-End] convert non-causal vocoders into causal ones by zero-padding, [^Quamer2024End-to-End].
+
+However, methods relying on frame-by-frame autoregressive structures degrade the quality of early segments and incur extra computational overhead, and zero-padding causal vocoders suffer from artifacts, limiting overall naturalness. 
+
+### Style Modeling
+
+Modeling speaking identity remains a central challenge in speech research.
+
+Prior approaches have largely relied on pre-trained models to capture only a limited set of styles, like wav2vec 2.0 [^Baevski2020Wav2vec], HuBERT [^Hsu2021Hubert], and WavLM [^Chen2022Wavlm]. 
+Attentron [^Choi2020Attentron] introduces an attention mechanism to extract speaker identity from reference samples. 
+ZSM-SS [^Kumar2021Normalization] proposes a Transformer-based architecture with an external speaker encoder based on wav2vec 2.0. 
+Daft-Exprt [^Za{\i}di2021Daft-Exprt] employs a gradient reversal layer to improve reference speaker fidelity in style transfer. 
+GenerSpeech introduces both global and local style adapters to capture diverse speaking identity [^Huang2022Generspeech], while Styler decomposes style into multiple levels of supervision [^Lee2021Styler]. 
+Yang et al. [^Yang2022Streamable] jointly model speaker identity and global prosody using a GST-based style token network.
+
+Mega-TTS 2 employs vector quantization for prosody encoding combined with a language model for prosody transfer [^Jiang2024Mega-TTS], and NaturalSpeech 3 uses factorized vector quantization to disentangle prosodic features [^Ju2024Naturalspeech]. 
+CosyVoice integrates x-vectors into a large language model to both disentangle and model prosody [^Du2024Cosyvoice]. 
+Most of these methods focus on offline speech synthesis, while our work addresses the challenge of zero-shot online voice conversion by modeling rich speaking identity and maintaining precise content alignment.
+
+![](figures/arch.pdf)
+
+<a id="fig: arch">The overall architecture of Conan (a). 
+Online source speech is fed into the system in chunks, and the synthesized output is likewise produced on a chunkwise basis.
+
+In (b), the size of the right‐context chunk R is configurable; when it is set to zero, the model operates in a chunkwise causal mode.
+
+Here, $C_i^n$ is the content feature of the $i$-th chunk at layer $n$, $R_i^n$ is the right‐context block, $s_i^n$ is the chunk summary, and $M_{i}^n$ is the memory bank from the previous chunks.
+
+Attention is computed using $(Q_i^n,K_i^n,V_i^n)$.
+
+The output summary $m_{i}^{\,n+1}$ is also obtained and input to the next chunk in the upper layer.</a>
