--- a/Models/-VC/2025.07.19_Conan.md
+++ b/Models/-VC/2025.07.19_Conan.md
@@ -454,3 +454,17 @@ Furthermore, when right‐context chunks are omitted, all metrics worsen, indica
 
 Furthermore, removing the Adaptive Style Encoder results in a marked decrease in MOS-S, confirming that our approach effectively captures speaker identity. 
 Finally, substituting the Causal Shuffle Vocoder with a zero-padding causal HiFi-GAN leads to a decline in MOS-Q, as the zero padding causal HiFi-GAN causes a decline in synthesis quality.
+
+## 5·Conclusion
+
+In this paper, we introduce Conan, a streaming voice conversion method that preserves the linguistic content of a source utterance while adopting the speaker information of a reference utterance. 
+At its core, Conan employs the Streaming Content Extractor based on Emformer to encode source audio with minimal latency, ensuring semantic information is captured in real time. 
+To transfer the reference speaker identity, Adaptive Style Encoder analyzes the reference speech and derives detailed speaker representations that guide the conversion process. 
+Finally, Causal Shuffle Vocoder, built upon a fully causal HiFiGAN architecture enhanced with pixel-shuffle operations, reconstructs high-fidelity audio with low generation delay. 
+Experimental results show that Conan surpasses existing baseline approaches, achieving better performance according to both subjective and objective metrics.
+
+\clearpage
+\bibliographystyle{IEEEtran}  
+\bibliography{custom}   
+
+\end{document}
